# knowledge-server

./: .env.example  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RESEARCH_AGENT_ISSUES.md  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  test_mcp_server.py  test_scenarios.py
.claude/: settings.local.json
docs/: COMMIT_GUIDELINES.md  MCP_SETUP.md  Problem Statement and Context.md
docs/archive/: ChromaDB Integration PoC Results.md  Context-Rich API Index for Query Expansion.md  Design - Current Thinking.md  Embedding Model Validation Results.md  Evaluation Framework Plan.md  Implementation Guide - Query Expansion.md  Implementation Guide.md  Intelligent Chunking Report 2.md  Intelligent Chunking.md  LLM Enhancement Lessons Learned.md  Multi-Stage Retrieval Architecture.md  Two-Stage Query Expansion Architecture.md
docs/components/: 01_openapi_processor.md  02_vector_store_manager.md  03_knowledge_retriever.md  04_mcp_server.md  05_evaluation_framework.md  06_research_agent.md  07_markdown_processor.md  08_intelligent_chunk_filtering.md  README.md
experiments/: prompt_comparison_results.json  prompt_tuning.py  simple_prompt_test.py
prototypes/: chromadb_hybrid_search_test.py  chunk_analyzer.py  context_aware_gemma_search.py  embedding_quality_comparison.py  embedding_validator.py  final_enhanced_search.py  gemma_enhanced_search.py  llm_enhanced_search.py  poc_bedrock_real_tools.py  poc_llamacpp_bind_tools.py  poc_llamacpp_tools.py  poc_llamacpp_tools_fixed.py  prototype_chunker.py  quick_embedding_test.py  structured_chunk_enhancement.py  test_alternative_embedding.py  test_bedrock.py  test_gemma.py  test_gemma_gguf.py  test_logging_prototype.py  test_qwen3_8b.py  test_qwen3_8b_gguf.py  test_qwen3_fixed.py
samples/: Amazon Advertising Advanced Tools Center 1.md  Amazon Advertising Advanced Tools Center 2.md  Amazon Advertising Advanced Tools Center.md  SponsoredProducts_prod_3p.json  openapi.json  openapi.yaml
scripts/: prep-commit.sh
src/cli/: __init__.py  config.py  main.py
src/llm/: __init__.py  bedrock_provider.py  local_provider.py  provider.py
src/markdown_processor/: __init__.py  chunk_assembler.py  content_analyzer.py  header_extractor.py  navigation_builder.py  parser.py  processor.py  reference_scanner.py  scanner.py  section_splitter.py
src/mcp_server/: __init__.py  askAPI.py  response_assembler.py  searchAPI.py  server.py  shared_resources.py
src/openapi_processor/: chunk_assembler.py  chunk_splitter.py  extractor.py  graph_builder.py  parser.py  processor.py  reference_resolver.py  reference_scanner.py  scanner.py  validator.py
src/query_expansion/: index_builder.py  query_expander.py
src/research_agent/: __init__.py  agent.py  agent_tools.py  data_classes.py  tools.py
src/retriever/: __init__.py  context_assembler.py  data_classes.py  knowledge_retriever.py  reference_expander.py
src/utils/: logging_config.py
src/vector_store/: __init__.py  chromadb_utils.py  embedding_cache.py  embedding_utils.py  metadata_utils.py  vector_store_manager.py
tests/: test_embedding_cache.py  test_integration.py
tests/integration/: test_vector_store_integration.py
tests/markdown_processor/: __init__.py  test_header_extractor.py  test_integration.py  test_navigation_builder.py  test_parser.py  test_processor.py  test_reference_scanner.py  test_scanner.py  (+2 more)
(+25 files in other folders)
