[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-server"
version = "0.1.0"
description = "A specialized MCP server that makes large OpenAPI specifications accessible to LLMs through intelligent chunking and retrieval"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Knowledge Server Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "boto3>=1.39.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff",
]

[project.scripts]
knowledge-server = "cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/knowledge-server"
Repository = "https://github.com/your-org/knowledge-server"
Issues = "https://github.com/your-org/knowledge-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"